--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Yellow can quickly become overpowering. It can strain the eyes. Again, use it sp
 </div>
    <div><br><h3>This section includes.......</h3>
        <div class="inputs animate__animated animate__zoomIn"> 
-        <div > <input type="color" class="gridbgbg" value="#f1e4fb"> Background(this section)<label id="gridbgbg">#f1e4fb</label></div>  
+        <div > <input type="color" class="gridbgbg" value="#e7d2fa"> Background(this section)<label id="gridbgbg">#e7d2fa</label></div>  
         <div ><input type="color"  class="gc" value="#000000"> Text-Color( this section)<label id="gc">#000000 </label></div>  
             <div><input type="color"  class="grdbg" value="#ffffff"> Background(card)<label id="grdbg">#ffffff</label></div>  
 
