--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Yellow can quickly become overpowering. It can strain the eyes. Again, use it sp
     </div>
 </div>
    <div><br><h3>This section includes.......</h3>
-       <div class="inputs" data-aos="fade-in" data-aos-duration="1000"> 
+       <div class="inputs"> 
         <div > <input type="color" class="gridbgbg" value="#ecd1ff"> Background (this section)<label id="gridbgbg">#ecd1ff</label></div>  
         <div ><input type="color"  class="gc" value="#000000"> Text-Color ( this section)<label id="gc">#000000 </label></div>  
             <div><input type="color"  class="grdbg" value="#ffffff"> Background (card)<label id="grdbg">#ffffff</label></div>  
